# cellEngine

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  cellEngine.hpp  main.cpp
examples/: game_of_life.cpp  snake.cpp
glad/: CMakeLists.txt  glad.c  glad.h
include/: cellEngine.hpp
shaders/: shader.fs  shader.gs  shader.vs
src/: cellEngine.hpp  game_of_life.cpp  glad.c  snake.cpp
src/examples/: game_of_life.cpp
src/shaders/: shader.fs  shader.gs  shader.vs
